force-app/main/default/objects/Quote/fields/Accesorio_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Accesorio_Adicional__c</fullName>
    <label>Accesorio Adicional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tina</fullName>
            </value>
            <value>
                <fullName>Camastro</fullName>
            </value>
            <value>
                <fullName>Cajon</fullName>
                <label>Cajón</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>