force-app/main/default/objects/Quote/fields/Imp_Aduanas__c.field-meta.xml
<CustomField>
    <fullName>Imp_Aduanas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imp. Aduanas</label>
    <type>Checkbox</type>
</CustomField>