force-app/main/default/objects/Quote/fields/Notas_Adicionales__c.field-meta.xml
<CustomField>
    <fullName>Notas_Adicionales__c</fullName>
    <label>Notas Adicionales</label>
    <type>TextArea</type>
</CustomField>