force-app/main/default/objects/Quote/fields/Precio_del_accesorio_adicional__c.field-meta.xml
<CustomField>
    <fullName>Precio_del_accesorio_adicional__c</fullName>
    <label>Precio del accesorio adicional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>