force-app/main/default/objects/Quote/fields/Producto_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Producto_Referencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Referencia</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>