force-app/main/default/objects/Quote/fields/Tipo_de_cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cotizaci_n__c</fullName>
    <label>Tipo de cotización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con impuestos</fullName>
            </value>
            <value>
                <fullName>Exonerado de IVA</fullName>
            </value>
            <value>
                <fullName>Exonerado de impuestos aduaneros</fullName>
            </value>
            <value>
                <fullName>Exonerado completo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>