force-app/main/default/objects/Quote/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehículo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>