force-app/main/default/objects/Quote/validationRules/Accesorio_sin_precio.validationRule-meta.xml
<ValidationRule>
    <fullName>Accesorio_sin_precio</fullName>
    <active>true</active>
    <description>Si indica que el vehiculo lleva un accesorio adicional debe indicar el precio del mismo</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(Accesorio_Adicional__c))),
 ISBLANK(Precio_del_accesorio_adicional__c)
)</errorConditionFormula>
    <errorDisplayField>Precio_del_accesorio_adicional__c</errorDisplayField>
    <errorMessage>El precio del accesorio adicional es requerido.</errorMessage>
</ValidationRule>